@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 01-09-2005 fixed: dvdplayer would lockup if OSD was open and player came across a stillframe
  - 01-09-2005 fixed: thumbnails for .strm files
  - 01-09-2005 added: big list view to my video title view
  - 31-08-2005 changed: new version of dumb module codec. now also enabled for .xm's.
